# mcp-high-availability

./: .gitignore  Dockerfile  README.md  client.http  docker-compose.yaml  pyproject.toml  resilient_client.py  server.py  session_store.py  test_lb.py  test_mcp_client.py  test_resilience.py
haproxy/: haproxy.cfg
stores/: memory_store.py  redis_store.py
