[project]
name = "mcp-high-availability"
version = "0.1.0"
description = "High availability for stateful MCP servers with HAProxy sticky sessions and Redis-backed state"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.5",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
]
